--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="tab_playlists">Playlists</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="require_permissions">We want you to grant some permissions in order to work properly.</string>
+    <string name="unable_to_work_without_permissions">Sorry, we cannot work without these permissions.</string>
+    <string name="no_songs">There are no songs on this device.</string>
 </resources>
